--- a/index.html
+++ b/index.html
@@ -48,26 +48,32 @@
                   <li><a href="resume.html">Resume</a></li>
                   <li><a href="project.html">Projects</a></li>
                 </ul>
+
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Claire Wilson.</h1>
+            <br><br><br><br><br><br>
+            <h1 id ="circle"><br><br><br>Claire Wilson.</h1>
+            <!-- <h1 class="cover-heading">Claire Wilson.</h1>
             <p class="lead"> GWC Summer Immersion Program</p>
-            <p class="lead">
-              <a href="about.html" class="btn btn-lg btn-default">About me</a>
+            <p class="lead"> -->
+              <a href="about.html" class="btn btn-lg btn-default"><br><br>About me</a>
             </p>
           </div>
           <br>
           <br>
-<p style= "font-size: 11px" >Email: wilson.m.claire@gmail.com <br> Snapchat: @berriestclarist <br> Facebook: @c19cw1 <br> Linked-In: Soon to come!</p>
+
+
         </div>
 
-      </div>
 
+      </div>
+      <br><br><br><br>
+<p style= "font-size: 11px" id = "circle1" ><br><br><br><br><br>Email: wilson.m.claire@gmail.com <br> Snapchat: @berriestclarist <br> Facebook: @c19cw1 <br> Linked-In: Claire Wilson</p>
     </div>
-      
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
