--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
            
           </div>
            <h4><br></h4>
-          <a href= "https://docs.google.com/document/d/1kLIUvnHHwQRo7XhxvydXQQALEZrQRPOgTYt24Z65X00/edit?usp=sharing"><img src= "Resume.png"></a>
+          <img src= "Red Circle Creative Resume (10).pdf">
           
         </div>
 
