--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
            
           </div>
            <h4><br></h4>
-          <img src= "cresume.pdf">
+          <img src= "cresume.pdf" alt="Smiley face">
           
         </div>
 
