--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
            
           </div>
            <h4><br></h4>
-          <img src= "cresume.pdf" alt="Smiley face">
+          <div class="canva-embed" data-height-ratio="1.2941" data-design-id="DACcW95NceY" style="padding:129.41% 5px 5px 5px;background:rgba(0,0,0,0.03);border-radius:8px;"></div><script async src="https://sdk.canva.com/v1/embed.js"></script><a href="https://www.canva.com/design/DACcW95NceY/view?utm_content=DACcW95NceY&utm_campaign=designshare&utm_medium=embeds&utm_source=link" target="_blank">Red Circle Creative Resume</a> by <a href="https://www.canva.com/clairethebearny?utm_campaign=designshare&utm_medium=embeds&utm_source=link" target="_blank">Claire Wilson</a>
           
         </div>
 
