--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ body, html {
  -->
 
 <!-- Skills Section -->
-<div class="w3-container w3-light-grey w3-padding-64" id="team">
+<div class="w3-container w3-blue-grey w3-padding-64" id="team">
   <div class="w3-row-padding">
   <h3 class="w3-center">RESUME</h3>
     <div class="w3-col m3">
@@ -170,7 +170,7 @@ body, html {
 </div>
 
 <!-- Contact Section -->
-<div class="w3-container w3-blue-grey" style="padding:128px 16px" id="contact">
+<div class="w3-container w3-white" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Lets get in touch. Send me a message:</p>
   <div class="w3-row-padding" style="margin-top:64px">
