--- a/index.html
+++ b/index.html
@@ -62,12 +62,9 @@ body, html {
     <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">About me</a></p>
   </div>
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+      <a href="https://www.facebook.com/c19cw1"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+      <i class="fa fa-snapchat w3-hover-opacity"></i>
+      <a href="https://www.linkedin.com/in/claire-wilson-b55b51145/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   </div>
 </header>
 
@@ -193,12 +190,9 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+      <a href="https://www.facebook.com/c19cw1"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+      <i class="fa fa-snapchat w3-hover-opacity"></i>
+      <a href="https://www.linkedin.com/in/claire-wilson-b55b51145/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   </div>
 </footer>
 
