--- a/index.html
+++ b/index.html
@@ -173,21 +173,45 @@ body, html {
 <div class="w3-container w3-white w3-row-padding" id="contact">
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Lets get in touch. Send me a message:</p>
-  <div class="w3-row-padding" style="margin-top:64px">
-    <div class="w3-half">
-      <p style= "text-align: left"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: wilson.m.claire@gmail.com</p>
-      <p style= "text-align: left"><i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"> </i> LinkedIn: Claire Wilson</p>
-      <p style= "text-align: left"><i class="fa fa-facebook fa-fw w3-xxlarge w3-margin-right"> </i> Facebook: c19cw1</p>
-      <p style= "text-align: left"><i class="fa fa-snapchat fa-fw w3-xxlarge w3-margin-right"> </i>  Snapchat: @berriestclarist</p>
+   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+   <!-- Style The Contact Form How Ever You Prefer -->
+   <link rel="stylesheet" href="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/style.css">
 
+  <form id="gform" method="POST" class="pure-form pure-form-stacked"
+  action="https://script.google.com/macros/s/AKfycbyeH7PCOqMKmKXnakgOavfPVQ6dK-gG3IHvh73kXUh80q9bnDc/exec">
+    <!-- change the form action to your script url -->
 
-    </div>
-    <div class="w3-half">
-    <img src="me.jpg" width="50%"/>
-    </div>
-    </div>
+    <fieldset class="pure-group">
+      <label for="name">Name: </label>
+      <input id="name" name="name" placeholder="What's your name?" />
+    </fieldset>
+
+    <fieldset class="pure-group">
+      <label for="email"><em>Your</em> Email Address:</label>
+      <input id="email" name="email" type="email" value=""
+      required placeholder="your.name@email.com"/>
+      <span id="email-invalid" style="display:none">
+        Must be a valid email address</span>
+    </fieldset>
+    
+    <fieldset class="pure-group">
+      <label for="message">Message: </label>
+      <textarea id="message" name="message" rows="10"
+      placeholder="Tell us what's on your mind..."></textarea>
+    </fieldset>
+
+    <button class="button-success pure-button button-xlarge">
+      <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+
+  </form>
+
+  <!-- Customise the Thankyou Message People See when they submit the form: -->
+  <div style="display:none;" id="thankyou_message">
+    <h2><em>Thanks</em> for contacting me!
+      I will get back to you soon!</h2>
   </div>
-</div>
+  </div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
