--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">Contact me!</h3>
   <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
+    <div class="w3-col-whole w3-container">
     
       <!-- FORM -->
       <p>I would love to hear from you:</p>
