--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@ body, html {
     <div class="w3-col m3">
       <p>Attached below you will find a link to a downloadable version.</p>
       <p>If you have any further questions, please feel free to contact me using the information below.</p>
-      <a href= "https://drive.google.com/a/dalton.org/file/d/0B2JbvXKMqpBpMkVNOVY2OGxWZlk/view?usp=sharing">Resume</a>
+      <a href= "https://drive.google.com/file/d/0B2JbvXKMqpBpWkRsVmctX0NOWVk/view?usp=sharing">Resume</a>
       </div>
       <div class="w3-col m9">
-      <img src="resumecir.png" width="100%">
+      <img src="claireResume.png" width="100%">
     </div>
   </div>
 </div>
