--- a/index.html
+++ b/index.html
@@ -192,13 +192,19 @@ body, html {
   action="https://script.google.com/macros/s/AKfycbzei7tkMpRJdsOqa881dtKwTS44yiINVqJ9uyQWSOHnmXF_pz4Z/exec">
     <!-- change the form action to your script url -->
 
-    <fieldset class="pure-group">
+  <fieldset class="pure-group">
       <label for="name">Name: </label>
-      <input id="name" name="name" placeholder="What's your name?" />
+      <input id="name" name="name" placeholder="What your Mom calls you" />
     </fieldset>
 
     <fieldset class="pure-group">
-      <label for="email">Your email address:</label>
+      <label for="message">Message: </label>
+      <textarea id="message" name="message" rows="10"
+      placeholder="Tell us what's on your mind..."></textarea>
+    </fieldset>
+
+    <fieldset class="pure-group">
+      <label for="email"><em>Your</em> Email Address:</label>
       <input id="email" name="email" type="email" value=""
       required placeholder="your.name@email.com"/>
       <span id="email-invalid" style="display:none">
@@ -206,19 +212,28 @@ body, html {
     </fieldset>
 
     <fieldset class="pure-group">
-      <label for="message">Message: </label>
-      <textarea id="message" name="message" rows="10"
-      placeholder="What's up doc'?"></textarea>
+      <label for="color">Favourite Color: </label>
+      <input id="color" name="color" placeholder="green" />
     </fieldset>
 
-    <button class="w3-button w3-black w3-right w3-section" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
+    <button class="button-success pure-button button-xlarge">
+      <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
 
   </form>
+
   <!-- Customise the Thankyou Message People See when they submit the form: -->
-</div>
-</div>
+  <div style="display:none;" id="thankyou_message">
+    <h2><em>Thanks</em> for contacting us!
+      We will get back to you soon!</h2>
+  </div>
+
+  <!-- Submit the Form to Google Using "AJAX" -->
+  <script data-cfasync="false" type="text/javascript"
+  src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
+  <!-- <script data-cfasync="false" type="text/javascript"
+  src="/form-submission-handler.js"></script> -->
+<!-- END -->
+
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
