--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@ body, html {
   <h3 class="w3-center">PAST PROJECTS</h3>
 
   <div class="w3-row-padding" style="margin-top:64px">
-    <div class="w3-col l3 m6">
+    <div class="w3-col-whole">
       <img src="lary.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation">
 
     </div>
-    <div class="w3-col l3 m6">
+    <div class="w3-col-whole">
       <img src="robot.jpg.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'">
 
     </div>
-    <div class="w3-col l3 m6">
+    <div class="w3-col-whole">
       <img src="escape.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A robot built to detect walls and move away from them using Arduino code and wisker wires.">
 
     </div>
-    <div class="w3-col l3 m6">
+    <div class="w3-col-whole">
       <img src="psgive.png" style="width:80%" onclick="onClick(this)" class="w3-hover-opacity" alt="P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by September 2017.">
 
     </div>
@@ -172,7 +172,6 @@ body, html {
 <!-- Contact -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">Contact me!</h3>
-  <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col-whole w3-container">
     
       <!-- FORM -->
@@ -232,6 +231,8 @@ body, html {
   src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
   <!-- <script data-cfasync="false" type="text/javascript"
   src="/form-submission-handler.js"></script> -->
+        </div>
+    </div>
 <!-- END -->
 
 <!-- Footer -->
