--- a/index.html
+++ b/index.html
@@ -179,11 +179,10 @@ body, html {
   <div class="w3-row w3-padding-32 w3-section">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> New York, US<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: 917-808-1751<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: vivianyee888@gmail.com<br>
+        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1 (917) 439 5523<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: wilson.m.claire@gmail.com<br>
       </div>
-      <center><p>Want to set up a meeting or ask any questions? Email me here. An error shows when you submit the form but don't worry, your messenge went through. 
-          Just press the back button and you'll be back to this website. Contact me below:</p></center>
+      <center><p>Want to get in touch? Contact me below (A confermation will appear, just hit the back arrow to return to the website):</p></center>
       <!-- DUDE -->
       <!-- START HERE -->
 
@@ -210,10 +209,6 @@ body, html {
         Must be a valid email address</span>
     </fieldset>
 
-    <fieldset class="pure-group">
-      <label for="color">Favourite Color: </label>
-      <input id="color" name="color" placeholder="green" />
-    </fieldset>
 
     <button class="button-success pure-button button-xlarge">
       <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
@@ -246,22 +241,8 @@ body, html {
 </footer>
 
 <!-- Add Google Maps -->
-<script>
-function myMap()
-{
-  myCenter=new google.maps.LatLng(41.878114, -87.629798);
-  var mapOptions= {
-    center:myCenter,
-    zoom:12, scrollwheel: false, draggable: false,
-    mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-  var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
-
-  var marker = new google.maps.Marker({
-    position: myCenter,
-  });
-  marker.setMap(map);
-}
+    
+   <script>
 
 // Modal Image Gallery
 function onClick(element) {
