--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body, html {
 <div class="w3-container" style="padding:128px 16px" id="work">
   <h3 class="w3-center">PAST PROJECTS</h3>
 
-  <div class="w3-row-padding" style="margin-top:64px">
+  <div class="w3-row-padding w3-padding-64" style="margin-top:64px">
     <div class="w3-col-whole">
       <img src="lary.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation">
 
@@ -170,8 +170,8 @@ body, html {
 </div>
     
 <!-- Contact -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">Contact me!</h3>
+<div class="w3-container w3-padding-64" id="contact">
+  <h3 class="w3-center">CONTACT ME</h3>
     <div class="w3-col-whole w3-container">
     
       <!-- FORM -->
@@ -182,8 +182,7 @@ body, html {
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1 (917) 439 5523<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: wilson.m.claire@gmail.com<br>
       </div>
-      <center><p>Want to get in touch? Contact me below (A confermation will appear, just hit the back arrow to return to the website):</p></center>
-      <!-- DUDE -->
+      <center><p>Want to get in touch? Contact me below:</p></center>
       <!-- START HERE -->
 
   <form id="gform" method="POST" class="pure-form pure-form-stacked"
@@ -192,13 +191,13 @@ body, html {
 
   <fieldset class="pure-group">
       <label for="name">Name: </label>
-      <input id="name" name="name" placeholder="What your Mom calls you" />
+      <input id="name" name="name" placeholder="Full Name" />
     </fieldset>
 
     <fieldset class="pure-group">
       <label for="message">Message: </label>
       <textarea id="message" name="message" rows="10"
-      placeholder="Tell us what's on your mind..."></textarea>
+      placeholder="Message"></textarea>
     </fieldset>
 
     <fieldset class="pure-group">
@@ -217,8 +216,8 @@ body, html {
 
   <!-- Customise the Thankyou Message People See when they submit the form: -->
   <div style="display:none;" id="thankyou_message">
-    <h2><em>Thanks</em> for contacting us!
-      We will get back to you soon!</h2>
+    <h2>Thanks for contacting me!
+      I will try to get back to you soon!</h2>
   </div>
 
   <!-- Submit the Form to Google Using "AJAX" -->
