--- a/index.html
+++ b/index.html
@@ -109,21 +109,21 @@ body, html {
   <h3 class="w3-center">PAST PROJECTS</h3>
 
   <div class="w3-row-padding w3-padding-64" style="margin-top:64px">
-    <div class="w3-col-whole">
+    <div class="w3-col-twothird">
       <img src="lary.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation">
-
+ <p>Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation using Python</p>
     </div>
-    <div class="w3-col-whole">
+    <div class="w3-col-twothird">
       <img src="robot.jpg.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'">
-
+ <p>Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'</p>
     </div>
-    <div class="w3-col-whole">
+    <div class="w3-col-twothird">
       <img src="escape.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A robot built to detect walls and move away from them using Arduino code and wisker wires.">
-
+ <p>A robot built to detect walls and move away from them using Arduino code and wisker wires.</p>
     </div>
-    <div class="w3-col-whole">
-      <img src="psgive.png" style="width:80%" onclick="onClick(this)" class="w3-hover-opacity" alt="P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by September 2017.">
-
+    <div class="w3-col-twothird">
+      <img src="psgive.png" style="width:80%" onclick="onClick(this)" class="w3-hover-opacity" alt="P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.">
+        <p>P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.</p>
     </div>
   </div>
 
@@ -175,7 +175,42 @@ body, html {
     <div class="w3-col-whole w3-container">
     
       <!-- FORM -->
-     
+     <style>
+         aside {
+    background: #1f8dd6; /* same color as selected state on site menu */
+    padding: 0.3em 1em;
+    border-radius: 3px;
+    color: #fff;
+    margin-bottom: 2em;
+}
+textarea {
+  width: 100%;
+}
+.content-head {
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin: 2em 0 1em;
+}
+.is-center {
+  text-align: center;
+}
+.button-success {
+  color: white;
+  border-radius: 4px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  background: rgb(28, 184, 65); /* this is a green */
+}
+.button-xlarge {
+  font-size: 125%;
+}
+button {
+  float: right;
+}
+#name, #email {
+  width: 50%;
+}
+        </style>
   <div class="w3-row w3-padding-32 w3-section">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> New York, US<br>
