--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@ button {
   src="/form-submission-handler.js"></script> -->
         </div>
     </div>
+    </div>
 <!-- END -->
 
 <!-- Footer -->
