--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body, html {
       <a href= "https://drive.google.com/file/d/0B2JbvXKMqpBpWkRsVmctX0NOWVk/view?usp=sharing">Resume</a>
       </div>
       <div class="w3-col m9">
-      <img src="claireResume.png" width="100%">
+      <img src="claireResume(1).pdf" width="100%">
     </div>
   </div>
 </div>
