--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@ body, html {
   <h3 class="w3-center">RESUME</h3>
     <div class="w3-col m3">
       <p>Attached below you will find a link to a downloadable version.</p>
-      <p>If you have any further questions, please feel free to contact me using the information below.</p>
-      <a href= "https://drive.google.com/file/d/0B2JbvXKMqpBpWkRsVmctX0NOWVk/view?usp=sharing">Resume</a>
+      <p>If you have any further questions, please feel free to contact me using the contact form below.</p>
+      <a href= "https://www.canva.com/design/DACcW95NceY/KD28p49HdcLI3CTFOxro-A/view?utm_content=DACcW95NceY&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">Resume</a>
       </div>
       <div class="w3-col m9">
-      <img src="claireResume(1).pdf" width="100%">
+      <img src="claireResume(1).png" width="100%">
     </div>
   </div>
 </div>
