--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@ body, html {
     <div class="w3-col m3">
       <p>Attached below you will find a link to a downloadable version.</p>
       <p>If you have any further questions, please feel free to contact me using the contact form below.</p>
-      <a href= "https://www.canva.com/design/DACcW95NceY/KD28p49HdcLI3CTFOxro-A/view?utm_content=DACcW95NceY&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">Resume</a>
+      <a href= "https://drive.google.com/a/dalton.org/file/d/0B2JbvXKMqpBpRkJ4ZGRheU9uZnM/view?usp=sharing">Resume</a>
       </div>
       <div class="w3-col m9">
-      <img src="claireResume(1).png" width="100%">
+      <img src="cr.png" width="100%">
     </div>
   </div>
 </div>
