--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body, html {
     <div class="w3-third">
       <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Fun.</p>
-      <p>I enjoy hanging out with my friends, coding, singing, and dancing (even when I think someone is watching).</p>
+      <p>I enjoy hanging out with my friends, coding, singing, skiing, and dancing (even when I think someone is watching).</p>
     </div>
   </div>
 </div>
@@ -110,19 +110,19 @@ body, html {
 
   <div class="w3-row-padding w3-padding-120" style="margin-top:64px">
     <div class="w3-col-twothird">
-      <img src="lary.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation">
+      <img src="lary.jpg" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity" alt="Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation">
  <p>Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation using Python</p>
     </div>
     <div class="w3-col-twothird">
-      <img src="robot.jpg.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'">
+      <img src="robot.jpg.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity" alt="Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'">
  <p>Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'</p>
     </div>
     <div class="w3-col-twothird">
-      <img src="escape.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A robot built to detect walls and move away from them using Arduino code and wisker wires.">
+      <img src="escape.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity" alt="A robot built to detect walls and move away from them using Arduino code and wisker wires.">
  <p>A robot built to detect walls and move away from them using Arduino code and wisker wires.</p>
     </div>
     <div class="w3-col-twothird">
-      <img src="psgive.png" style="width:80%" onclick="onClick(this)" class="w3-hover-opacity" alt="P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.">
+      <img src="psgive.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity" alt="P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.">
         <p>P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.</p>
     </div>
   </div>
@@ -215,7 +215,7 @@ button {
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> New York, US<br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1 (917) 439 5523<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: wilson.m.claire@gmail.com<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: c19cw1@dalton.org<br>
       </div>
       <center><p>Want to get in touch? Contact me below:</p></center>
       <!-- START HERE -->
