--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@ body, html {
 
   <div class="w3-row-padding w3-padding-120" style="margin-top:64px">
     <div class="w3-col-twothird">
-      <img src="lary.jpg" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity" alt="Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation">
+      <img src="lary.jpg" style="width:50%; float: center;" onclick="onClick(this)" class="w3-hover-opacity" alt="Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation">
  <p>Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation using Python</p>
   
-      <img src="robot.jpg.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity" alt="Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'">
+      <img src="robot.jpg.png" style="width:50%; float: center;" onclick="onClick(this)" class="w3-hover-opacity" alt="Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'">
  <p>Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'</p>
     </div>
     <div class="w3-col-twothird">
-      <img src="escape.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity" alt="A robot built to detect walls and move away from them using Arduino code and wisker wires.">
+      <img src="escape.png" style="width:50%; float: center;" onclick="onClick(this)" class="w3-hover-opacity" alt="A robot built to detect walls and move away from them using Arduino code and wisker wires.">
  <p>A robot built to detect walls and move away from them using Arduino code and wisker wires.</p>
     
     
-      <img src="psgive.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity" alt="P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.">
+      <img src="psgive.png" style="width:50%; float: center;" onclick="onClick(this)" class="w3-hover-opacity" alt="P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.">
         <p>P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.</p>
     </div>
   </div>
@@ -160,10 +160,10 @@ body, html {
     <div class="w3-col m3">
       <p>Attached below you will find a link to a downloadable version.</p>
       <p>If you have any further questions, please feel free to contact me using the contact form below.</p>
-      <a href= "https://drive.google.com/a/dalton.org/file/d/0B2JbvXKMqpBpRkJ4ZGRheU9uZnM/view?usp=sharing">Resume</a>
+      <a href= "https://drive.google.com/file/d/0B2JbvXKMqpBpWkRsVmctX0NOWVk/view?usp=sharing">Resume</a>
       </div>
       <div class="w3-col m9">
-      <img src="cr.png" width="100%">
+      <img src="claireResume (5).pdf" width="100%">
     </div>
   </div>
 </div>
