--- a/index.html
+++ b/index.html
@@ -105,23 +105,30 @@ body, html {
 </div>
 
 <!-- Work Section -->
+    <style>
+        img{
+        width:50;
+        display: block;
+        margin: 0 auto;
+        }
+    </style>
 <div class="w3-container" style="padding:128px 16px" id="work">
   <h3 class="w3-center">PAST PROJECTS</h3>
 
   <div class="w3-row-padding w3-padding-120" style="margin-top:64px">
     <div class="w3-col-twothird">
-      <img src="lary.jpg" style="width:50%; float: center;" onclick="onClick(this)" class="w3-hover-opacity" alt="Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation">
+      <img src="lary.jpg" onclick="onClick(this)" class="w3-hover-opacity" alt="Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation">
  <p>Say hello to Lary the evil Chat Box. In this project I was asked to create a chat box capable of holding a simple conversation using Python</p>
   
-      <img src="robot.jpg.png" style="width:50%; float: center;" onclick="onClick(this)" class="w3-hover-opacity" alt="Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'">
+      <img src="robot.jpg.png" onclick="onClick(this)" class="w3-hover-opacity" alt="Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'">
  <p>Using Arduino and the Board of Education Shield, I was able to create a robot that not only moves but also lights up to the song 'Fleur de Lis'</p>
     </div>
     <div class="w3-col-twothird">
-      <img src="escape.png" style="width:50%; float: center;" onclick="onClick(this)" class="w3-hover-opacity" alt="A robot built to detect walls and move away from them using Arduino code and wisker wires.">
+      <img src="escape.png" onclick="onClick(this)" class="w3-hover-opacity" alt="A robot built to detect walls and move away from them using Arduino code and wisker wires.">
  <p>A robot built to detect walls and move away from them using Arduino code and wisker wires.</p>
     
     
-      <img src="psgive.png" style="width:50%; float: center;" onclick="onClick(this)" class="w3-hover-opacity" alt="P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.">
+      <img src="psgive.png" onclick="onClick(this)" class="w3-hover-opacity" alt="P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.">
         <p>P.S. Give, an ios app built to connect PTAs of public schools with donnors directly, cutting out most of the service fees transaction costs that would come from donating on a larger companies donation website. Currently in Beta testing, but scheduled to arrive on the app store by December 2017.</p>
     </div>
   </div>
